--- a/bonus/bonusstyle.css
+++ b/bonus/bonusstyle.css
@@ -5,4 +5,8 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   margin: 20px;
   padding: 20px;
+}
+
+h3 {
+  color: red;
 }/*# sourceMappingURL=bonusstyle.css.map */
